transfer the corr results into corr folder & change the save path of code

--- a/Code.ipynb
+++ b/Code.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "id": "c25078b2-e93b-4d7c-b541-59c0f0ddbade",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "id": "8bf7a2bc-fbf2-4c68-9b60-76f877ad257b",
    "metadata": {},
    "outputs": [],
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "id": "dcc12c07-f05d-4ee4-902a-2fb1dfd7fb1c",
    "metadata": {},
    "outputs": [],
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "id": "2d6987fe-2a02-41eb-ab47-f0b56eb29ad8",
    "metadata": {},
    "outputs": [],
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "id": "46ab15fe-8414-4c62-9803-47ff97ab294f",
    "metadata": {
     "scrolled": false
@@ -196,7 +196,7 @@
     "    corr = raw_data[group[i]].corr()\n",
     "    plt.figure(figsize = (12,8), dpi = 300)\n",
     "    sns.heatmap(corr,linewidths=0.1,vmax=1.0, square=True,linecolor='white', annot=True)\n",
-    "    plt.savefig('corr_heatmap_{}.jpg'.format(i))"
+    "    plt.savefig('./corr/corr_heatmap_{}.jpg'.format(i))"
    ]
   },
   {
